--- a/Desenvolvimento Front-End/src/estilos/cadastro.css
+++ b/Desenvolvimento Front-End/src/estilos/cadastro.css
@@ -19,11 +19,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('../../img/21.jpg'); 
-    background-size: cover;
-    background-position: left;
-    height: 100vh;
-    align-items: left;
+    background-color: rgb(204, 204, 206);
 }
 
 div.container{
@@ -36,10 +32,24 @@ div.container{
 div.cadastro{
     padding: 30px 70px;
     background-color: var(--corFundo1);
-    border-radius: 20px;
-    height: 90%;
+    border-radius: 20px 0px 0px 20px;
+    height: auto;
+    width: 18%;
     display: grid;
     place-items: center;
+}
+
+.image-container {
+    width: 75%;
+    height: 100%; /* Altura total do container */
+}
+.image-container img {
+    max-width: 100%;
+    height: 100%;
+}
+
+.primeiro2{
+    margin-top: -20px;
 }
 
 
@@ -54,6 +64,8 @@ div.cadastro{
     font-weight: bold;
 }
 
+
+
 a#continuar{
     margin-top: 90px;
     padding: 10px;
@@ -66,14 +78,17 @@ a#continuar{
     font-size: 1em;
 }
 
+
+
 .cont{
     display: grid;
     place-items: right;
+    padding-top: 0px;
+    margin-top: 0px;
 }
 
 #cadastrar{
-    margin-left: 0px;
-    margin-top: 20px;
+    margin: 0px;
     padding: 10px;
     border-radius: 10px;
     display: inline-block;
@@ -82,7 +97,7 @@ a#continuar{
     text-decoration: none;
     font-weight: bold;
     border: none;
-    margin-top: 90px;
+    margin-top: 20px;
     justify-self: end;
     font-size: 1em;
 }
@@ -111,9 +126,6 @@ input{
     justify-self: right;
 }
 
-.br{
-    height: 100px;
-}
 
 #etapa{
     color: var(--corMiniTexto);
