--- a/Desenvolvimento Front-End/src/estilos/cadastro.css
+++ b/Desenvolvimento Front-End/src/estilos/cadastro.css
@@ -61,7 +61,7 @@ div.cadastro{
 .container p{
     padding-top: 40px;
     padding-bottom: 8px;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 
