--- a/Desenvolvimento Front-End/src/estilos/cadastro.css
+++ b/Desenvolvimento Front-End/src/estilos/cadastro.css
@@ -19,33 +19,35 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(204, 204, 206);
+    background-color: #fff5ea;
 }
 
 div.container{
     height: 100vh;
     display: flex;
-    justify-content: flex-end;
+    justify-content: end;
 } 
 
 
 div.cadastro{
-    padding: 30px 70px;
+    padding: 50px 70px;
     background-color: var(--corFundo1);
     border-radius: 20px 0px 0px 20px;
     height: auto;
     width: 18%;
-    display: grid;
-    place-items: center;
+    
 }
 
 .image-container {
     width: 75%;
-    height: 100%; /* Altura total do container */
+    height: 100%;
+    
 }
+
 .image-container img {
     max-width: 100%;
     height: 100%;
+  
 }
 
 .primeiro2{
@@ -58,6 +60,10 @@ div.cadastro{
     padding: 4px 0px;;
 }
 
+#login{
+    padding: 100px 70px;
+}
+
 .container p{
     padding-top: 40px;
     padding-bottom: 8px;
@@ -67,7 +73,7 @@ div.cadastro{
 
 
 a#continuar{
-    margin-top: 90px;
+    margin-top: 80px;
     padding: 10px;
     border-radius: 10px;
     color: white;
@@ -97,7 +103,7 @@ a#continuar{
     text-decoration: none;
     font-weight: bold;
     border: none;
-    margin-top: 20px;
+    margin-top: 40px;
     justify-self: end;
     font-size: 1em;
 }
@@ -138,7 +144,7 @@ a{
 }
 
 a#voltar{
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     display: block;
 }
 
