--- a/Desenvolvimento Front-End/src/estilos/telas-cadastros.css
+++ b/Desenvolvimento Front-End/src/estilos/telas-cadastros.css
@@ -19,7 +19,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #fff5ea;
+    background-color: #F5F5F7;
 }
 
 div.container{
@@ -27,16 +27,6 @@ div.container{
     display: flex;
     justify-content: end;
 } 
-
-
-div.cadastro{
-    padding: 50px 70px;
-    background-color: var(--corFundo1);
-    border-radius: 20px 0px 0px 20px;
-    height: auto;
-    width: 18%;
-    
-}
 
 .image-container {
     width: 75%;
@@ -50,91 +40,29 @@ div.cadastro{
   
 }
 
-.primeiro2{
-    margin-top: -20px;
-}
-
-
-.container .mini{
-    font-weight: normal;
-    padding: 4px 0px;;
+div.cadastro-container{
+    padding: 50px 70px;
+    background-color: var(--corFundo1);
+    border-radius: 20px 0px 0px 20px;
+    height: auto;
+    width: 18%;
+    
 }
 
 #login{
     padding: 100px 70px;
+    background-color: var(--corFundo1);
+    border-radius: 20px 0px 0px 20px;
+    height: auto;
+    width: 18%;
 }
+
+
 
 .container p{
     padding-top: 40px;
     padding-bottom: 8px;
     font-weight: bolder;
-}
-
-
-
-a#continuar{
-    margin-top: 80px;
-    padding: 10px;
-    border-radius: 10px;
-    color: white;
-    background-color: var(--corDestaque);
-    text-decoration: none;
-    font-weight: bold;
-    justify-self: end;
-    font-size: 1em;
-}
-
-
-
-.cont{
-    display: grid;
-    place-items: right;
-    padding-top: 0px;
-    margin-top: 0px;
-}
-
-#cadastrar{
-    margin: 0px;
-    padding: 10px;
-    border-radius: 10px;
-    display: inline-block;
-    color: white;
-    background-color: var(--corDestaque);
-    text-decoration: none;
-    font-weight: bold;
-    border: none;
-    margin-top: 40px;
-    justify-self: end;
-    font-size: 1em;
-}
-
-input{
-    height: 30px;
-    border-radius: 10px;
-    border: none;
-    text-indent: 10px;
-    justify-content: flex-end;
-    width: 100%;
-}
-
-#entrar{
-    margin-top: 20px;
-    padding: 7px 20px;
-    border-radius: 10px;
-    display: inline-block;
-    color: white;
-    background-color: var(--corDestaque);
-    text-decoration: none;
-    font-weight: bold;
-    border: none;
-    margin-top: 90px;
-    font-size: 1em; 
-    justify-self: right;
-}
-
-
-#etapa{
-    color: var(--corMiniTexto);
 }
 
 a{
@@ -150,5 +78,79 @@ a#voltar{
 
 a:hover{
     text-decoration: underline;
+    color: #8657e6;
 }
+
+.container .texto-mini{
+    font-weight: normal;
+    padding: 4px 0px;;
+}
+
+#etapa{
+    color: var(--corMiniTexto);
+}
+
+.texto-1{
+    margin-top: -20px;
+}
+
+input{
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+    text-indent: 10px;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+div.mini-container{
+    display: grid;
+    padding-top: 0px;
+    margin-top: 0px;
+}
+
+div.mini-container a#botao-continuar{
+    margin-top: 70px;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    background-color: var(--corDestaque);
+    text-decoration: none;
+    font-weight: bold;
+    justify-self: start;
+    font-size: 1em;
+}
+
+div.mini-container button#botao-cadastrar{
+    margin-top: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    background-color: var(--corDestaque);
+    text-decoration: none;
+    font-weight: bold;
+    border: none;
+    margin-top: 40px;
+    justify-self: start;
+    font-size: 1em;
+}
+
+div.mini-container button#botao-entrar{
+    margin-top: 20px;
+    padding: 7px 20px;
+    border-radius: 10px;
+    display: inline-block;
+    color: white;
+    background-color: var(--corDestaque);
+    text-decoration: none;
+    font-weight: bold;
+    border: none;
+    margin-top: 90px;
+    font-size: 1em; 
+    justify-self: start;
+}
+
+
+
+
 
