--- a/Desenvolvimento Front-End/src/estilos/index.css
+++ b/Desenvolvimento Front-End/src/estilos/index.css
@@ -1,5 +1,18 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'alfa';
+    src: url(../../fontes/AlfaSlabOne-Regular.ttf);
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'alexandria';
+    src: url(../../fontes/Alexandria-VariableFont_wght.ttf);
+    font-weight: normal;
+}
+
+
 :root {
     --corFundo1: #b9f6be;
     --corFundo2: #83e88a;
@@ -9,8 +22,11 @@
     --corMiniTexto: #696868;
     --corLinks: #5e17eb;
 
-    --fontPadrão: Arial, sans-serif;
+    --fontDestaque: 'alfa', serif, cursive;
+    --fontPadrão: 'alexandria', Arial, sans-serif;
 }
+
+
 
 *{
     margin: 0;
@@ -21,6 +37,7 @@
 body {
     font-family: var(--fontPadrão);
     background-color: #F5F5F7;
+    font-family: var(--fontPadrão);
 }
 
 nav {
@@ -48,8 +65,7 @@ nav ul li {
 nav .menu {
     text-decoration: none;
     color: black;
-    font-weight: bold;
-    margin: 0px 30px;
+    margin: 0px 80px;
     font-size: 24px;
 }
 
@@ -65,6 +81,8 @@ nav button {
 
 #sac{
     color: var(--corDestaque);
+    font-size: 40px;
+    font-family: var(--fontDestaque);
 }
 
 .container {
@@ -78,12 +96,15 @@ nav button {
     background-color: var(--corFundo1);
     padding: 96px 40px;
     text-align: left;
+    color: var(--corDestaque);
 
 }
 
 .banner h1 {
     color: var(--corDestaque);
     font-size: 64px;
+    font-family: var(--fontDestaque);
+    margin-bottom: 8px;
 }
 
 .banner p{
@@ -119,8 +140,10 @@ nav button {
 }
 
 .importance-section h2{
-    font-size: 56px;
+    font-size: 48px;
     color: var(--corDestaque);
+    font-family: var(--fontDestaque);
+    margin-bottom: 8px;
 }
 
 .importance-section p{
@@ -134,14 +157,14 @@ nav button {
 
 .posts-section {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
     justify-items: center;
     margin: 20px;
 }
 
 .post-container {
     text-align: center;
-    width: 220px; /* Ajuste conforme necessário */
+    width: 300px;
 }
 
 .post {
