--- a/Desenvolvimento Front-End/src/estilos/index.css
+++ b/Desenvolvimento Front-End/src/estilos/index.css
@@ -204,3 +204,81 @@ nav button {
     font-size: 40px;
     margin: 30px;
 }
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+footer {
+    background-color: #f5f5f5;
+    padding: 30px 0;
+    border-top: 1px solid #e0e0e0;
+    
+}
+
+.footer-container {
+    max-width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 60px;
+}
+
+.footer-section {
+    flex: 1;
+    min-width: 200px;
+    padding: 0 15px;
+    margin-bottom: 20px;
+    
+}
+
+.footer-section h3 {
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: black;
+}
+
+.footer-section ul {
+    list-style: none;
+    font-family: var(--fontPadrão);
+}
+
+.footer-section ul li {
+    margin-bottom: 8px;
+    
+}
+
+.footer-section ul li a {
+    text-decoration: none;
+    color: rgb(20, 20, 20);
+    transition: color 0.3s;
+    font-family: var(--fontPadrão);
+    font-weight: 32px;
+}
+
+.footer-section ul li a:hover {
+    color: #666;
+}
+
+.copyright {
+    text-indent: 70px;
+    padding-top: 20px;
+    border-top: 1px solid #e0e0e0;
+    color: #666;
+    font-size: 14px;
+    font-family: var(--fontPadrão);
+}
