--- a/Desenvolvimento Front-End/src/telas-cadastros.css
+++ b/Desenvolvimento Front-End/src/telas-cadastros.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/* @charset "UTF-8";
 
 :root{
     --corFundo1: #b9f6be;
@@ -153,4 +153,4 @@ div.mini-container button#botao-entrar{
 
 
 
-
+ */
