--- a/Desenvolvimento Front-End/src/duvidas.css
+++ b/Desenvolvimento Front-End/src/duvidas.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/* @charset "UTF-8";
 
 @font-face {
     font-family: 'alfa';
@@ -239,4 +239,4 @@ footer {
     cursor: pointer;
     font-size: 40px;
     margin: 30px;
-}
+} */
