--- a/Desenvolvimento Front-End/src/index.css
+++ b/Desenvolvimento Front-End/src/index.css
@@ -13,7 +13,7 @@
 }
 
 :root{
-    --fundo1: #b9f6be;
+    --fundo1: #97ec9e;
     --fundo2: #83e88a;
     --fundo3: #afd6ec;
     --destaque: #299431;
