primeira tela finalizada

--- a/Desenvolvimento Front-End/src/index.css
+++ b/Desenvolvimento Front-End/src/index.css
@@ -15,7 +15,7 @@
 :root{
     --fundo1: #97ec9e;
     --fundo2: #83e88a;
-    --fundo3: #afd6ec;
+    --fundo3: #9ccfec;
     --destaque: #299431;
     --texto: #333;
     --minitexto: #696868;
