--- a/Desenvolvimento Front-End/src/output.css
+++ b/Desenvolvimento Front-End/src/output.css
@@ -9,10 +9,13 @@
       "Courier New", monospace;
     --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-amber-100: oklch(96.2% 0.059 95.617);
+    --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-amber-900: oklch(41.4% 0.112 45.904);
     --color-emerald-100: oklch(95% 0.052 163.051);
     --color-cyan-100: oklch(95.6% 0.045 203.388);
+    --color-gray-200: oklch(92.8% 0.006 264.531);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
     --spacing: 0.25rem;
@@ -31,9 +34,13 @@
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
     --font-weight-bold: 700;
+    --font-weight-black: 900;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-3xl: 1.5rem;
+    --radius-4xl: 2rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -208,11 +215,8 @@
   .m-4 {
     margin: calc(var(--spacing) * 4);
   }
-  .my-4 {
-    margin-block: calc(var(--spacing) * 4);
-  }
-  .mt-0 {
-    margin-top: calc(var(--spacing) * 0);
+  .m-10 {
+    margin: calc(var(--spacing) * 10);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -223,38 +227,38 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
-  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-12 {
-    margin-top: calc(var(--spacing) * 12);
+  .mt-11 {
+    margin-top: calc(var(--spacing) * 11);
   }
-  .mt-100 {
-    margin-top: calc(var(--spacing) * 100);
-  }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
+  .mt-15 {
+    margin-top: calc(var(--spacing) * 15);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
-  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
   }
-  .mb-16 {
-    margin-bottom: calc(var(--spacing) * 16);
+  .mb-8 {
+    margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-\[-50\] {
+    margin-bottom: -50;
+  }
+  .mb-\[-50px\] {
+    margin-bottom: -50px;
+  }
+  .mb-\[-100px\] {
+    margin-bottom: -100px;
   }
   .ml-0 {
     margin-left: calc(var(--spacing) * 0);
@@ -268,8 +272,35 @@
   .h-dvh {
     height: 100dvh;
   }
-  .h-full {
-    height: 100%;
+  .max-h-1 {
+    max-height: calc(var(--spacing) * 1);
+  }
+  .max-h-14 {
+    max-height: calc(var(--spacing) * 14);
+  }
+  .max-h-96 {
+    max-height: calc(var(--spacing) * 96);
+  }
+  .max-h-120 {
+    max-height: calc(var(--spacing) * 120);
+  }
+  .max-h-130 {
+    max-height: calc(var(--spacing) * 130);
+  }
+  .max-h-140 {
+    max-height: calc(var(--spacing) * 140);
+  }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
+  .w-36 {
+    width: calc(var(--spacing) * 36);
+  }
+  .w-50 {
+    width: calc(var(--spacing) * 50);
+  }
+  .w-100 {
+    width: calc(var(--spacing) * 100);
   }
   .w-120 {
     width: calc(var(--spacing) * 120);
@@ -280,98 +311,11 @@
   .w-150 {
     width: calc(var(--spacing) * 150);
   }
-  .w-full {
-    width: 100%;
-  }
-  .max-w-\[0px\] {
-    max-width: 0px;
-  }
-  .max-w-\[00px\] {
-    max-width: 00px;
-  }
-  .max-w-\[25\%\] {
-    max-width: 25%;
-  }
-  .max-w-\[50\%\] {
-    max-width: 50%;
-  }
-  .max-w-\[60\%\] {
-    max-width: 60%;
-  }
-  .max-w-\[200px\] {
-    max-width: 200px;
-  }
-  .max-w-\[250px\] {
-    max-width: 250px;
-  }
-  .max-w-\[300px\] {
-    max-width: 300px;
-  }
-  .max-w-\[350px\] {
-    max-width: 350px;
-  }
-  .max-w-\[500px\] {
-    max-width: 500px;
-  }
-  .max-w-\[600px\] {
-    max-width: 600px;
-  }
-  .max-w-\[700px\] {
-    max-width: 700px;
-  }
-  .max-w-\[1200px\] {
-    max-width: 1200px;
-  }
-  .max-w-\[1500px\] {
-    max-width: 1500px;
-  }
-  .max-w-\[px\] {
-    max-width: px;
-  }
-  .min-w-\[2\] {
-    min-width: 2;
+  .w-350 {
+    width: calc(var(--spacing) * 350);
   }
   .min-w-\[25\%\] {
     min-width: 25%;
-  }
-  .min-w-\[50\%\] {
-    min-width: 50%;
-  }
-  .min-w-\[52\%\] {
-    min-width: 52%;
-  }
-  .min-w-\[53\%\] {
-    min-width: 53%;
-  }
-  .min-w-\[55\%\] {
-    min-width: 55%;
-  }
-  .min-w-\[60\%\] {
-    min-width: 60%;
-  }
-  .min-w-\[200px\] {
-    min-width: 200px;
-  }
-  .min-w-\[225px\] {
-    min-width: 225px;
-  }
-  .min-w-\[245px\] {
-    min-width: 245px;
-  }
-  .min-w-\[250px\] {
-    min-width: 250px;
-  }
-  .min-w-\[300px\] {
-    min-width: 300px;
-  }
-  .min-w-\[500px\] {
-    min-width: 500px;
-  }
-  .min-w-\[600px\] {
-    min-width: 600px;
-  }
-  .min-w-\[1500px\] {
-    min-width: 1500px;
   }
   .flex-1 {
     flex: 1;
@@ -388,14 +332,23 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
   .items-center {
     align-items: center;
   }
   .justify-center {
     justify-content: center;
   }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
   }
   .gap-15 {
     gap: calc(var(--spacing) * 15);
@@ -403,26 +356,20 @@
   .gap-40 {
     gap: calc(var(--spacing) * 40);
   }
+  .justify-self-center {
+    justify-self: center;
+  }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
+  }
+  .rounded-4xl {
+    border-radius: var(--radius-4xl);
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
-  }
-  .rounded-t-none {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-  .rounded-l-none {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-  .rounded-r-none {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
   }
   .rounded-b-none {
     border-bottom-right-radius: 0;
@@ -431,6 +378,12 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .bg-\(--destaque\) {
+    background-color: var(--destaque);
+  }
+  .bg-\(--fundo\) {
+    background-color: var(--fundo);
   }
   .bg-\(--fundo1\) {
     background-color: var(--fundo1);
@@ -441,38 +394,65 @@
   .bg-\(--fundo3\) {
     background-color: var(--fundo3);
   }
+  .bg-\(--fundo4\) {
+    background-color: var(--fundo4);
+  }
+  .bg-\(--links\) {
+    background-color: var(--links);
+  }
+  .bg-\[\#3bad43\] {
+    background-color: #3bad43;
+  }
+  .bg-\[\#18531c\] {
+    background-color: #18531c;
+  }
+  .bg-\[\#24792a\] {
+    background-color: #24792a;
+  }
+  .bg-\[\#217727\] {
+    background-color: #217727;
+  }
+  .bg-\[\#299431\] {
+    background-color: #299431;
+  }
   .bg-\[var\(--fundo1\)\] {
     background-color: var(--fundo1);
   }
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .bg-amber-100 {
-    background-color: var(--color-amber-100);
-  }
   .bg-amber-600 {
     background-color: var(--color-amber-600);
   }
-  .bg-amber-900 {
-    background-color: var(--color-amber-900);
-  }
-  .bg-cyan-100 {
-    background-color: var(--color-cyan-100);
-  }
-  .bg-emerald-100 {
-    background-color: var(--color-emerald-100);
-  }
-  .object-cover {
-    object-fit: cover;
+  .bg-none {
+    background-image: none;
   }
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
+  }
   .p-7 {
     padding: calc(var(--spacing) * 7);
   }
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
+  .p-15 {
+    padding: calc(var(--spacing) * 15);
+  }
+  .p-20 {
+    padding: calc(var(--spacing) * 20);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
+  }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
@@ -489,17 +469,32 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
+  .py-30 {
+    padding-block: calc(var(--spacing) * 30);
+  }
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
+  }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
+  }
+  .pb-10 {
+    padding-bottom: calc(var(--spacing) * 10);
+  }
   .text-center {
     text-align: center;
   }
-  .indent-1 {
-    text-indent: calc(var(--spacing) * 1);
-  }
   .indent-2 {
     text-indent: calc(var(--spacing) * 2);
-  }
-  .indent-4 {
-    text-indent: calc(var(--spacing) * 4);
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -521,10 +516,6 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
-  .text-sm {
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
-  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -532,11 +523,15 @@
   .text-\[16px\] {
     font-size: 16px;
   }
-  .text-\[38px\] {
-    font-size: 38px;
+  .text-\[32px\] {
+    font-size: 32px;
   }
   .text-\[40px\] {
     font-size: 40px;
+  }
+  .font-black {
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -545,8 +540,26 @@
   .text-\(--destaque\) {
     color: var(--destaque);
   }
+  .text-\(--links\) {
+    color: var(--links);
+  }
+  .text-amber-50 {
+    color: var(--color-amber-50);
+  }
+  .text-amber-100 {
+    color: var(--color-amber-100);
+  }
+  .text-amber-200 {
+    color: var(--color-amber-200);
+  }
   .text-black {
     color: var(--color-black);
+  }
+  .text-gray-200 {
+    color: var(--color-gray-200);
+  }
+  .text-gray-400 {
+    color: var(--color-gray-400);
   }
   .underline {
     text-decoration-line: underline;
@@ -554,6 +567,142 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .delay-700 {
+    transition-delay: 700ms;
+  }
+  .delay-1000 {
+    transition-delay: 1000ms;
+  }
+  .delay-3000 {
+    transition-delay: 3000ms;
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
+  }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
+  }
+  .duration-3000 {
+    --tw-duration: 3000ms;
+    transition-duration: 3000ms;
+  }
+  .hover\:scale-100 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 100%;
+        --tw-scale-y: 100%;
+        --tw-scale-z: 100%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-125 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 125%;
+        --tw-scale-y: 125%;
+        --tw-scale-z: 125%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-175 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 175%;
+        --tw-scale-y: 175%;
+        --tw-scale-z: 175%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-200 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 200%;
+        --tw-scale-y: 200%;
+        --tw-scale-z: 200%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:bg-\(--destaque\) {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--destaque);
+      }
+    }
+  }
+  .hover\:bg-\[\#1bb125\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #1bb125;
+      }
+    }
+  }
+  .hover\:bg-\[\#5cb962\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #5cb962;
+      }
+    }
+  }
+  .hover\:bg-\[\#52ac58\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #52ac58;
+      }
+    }
+  }
+  .hover\:bg-\[\#77f87f\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #77f87f;
+      }
+    }
+  }
+  .hover\:bg-\[\#299431\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #299431;
+      }
+    }
+  }
+  .hover\:bg-\[--destaque\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: --destaque;
+      }
+    }
+  }
+  .hover\:text-\(--links\) {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--links);
+      }
+    }
+  }
+  .hover\:text-amber-50 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-amber-50);
+      }
+    }
+  }
+  .hover\:text-gray-400 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-gray-400);
+      }
+    }
   }
   .hover\:text-gray-800 {
     &:hover {
@@ -577,12 +726,35 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
       --tw-outline-style: solid;
+      --tw-duration: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
