--- a/Desenvolvimento Front-End/src/output.css
+++ b/Desenvolvimento Front-End/src/output.css
@@ -8,23 +8,10 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-amber-50: oklch(98.7% 0.022 95.277);
-    --color-amber-100: oklch(96.2% 0.059 95.617);
-    --color-amber-200: oklch(92.4% 0.12 95.746);
-    --color-amber-600: oklch(66.6% 0.179 58.318);
-    --color-amber-900: oklch(41.4% 0.112 45.904);
-    --color-emerald-100: oklch(95% 0.052 163.051);
-    --color-cyan-100: oklch(95.6% 0.045 203.388);
     --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
     --spacing: 0.25rem;
-    --text-sm: 0.875rem;
-    --text-sm--line-height: calc(1.25 / 0.875);
-    --text-lg: 1.125rem;
-    --text-lg--line-height: calc(1.75 / 1.125);
-    --text-xl: 1.25rem;
-    --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
@@ -37,12 +24,18 @@
     --font-weight-black: 900;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
-    --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --color-fundo1: #97ec9e;
+    --color-fundo2: #83e88a;
+    --color-destaque: #299431;
+    --color-minitexto: #696868;
+    --color-links: #5e17eb;
+    --font-alfa: alfa, serif, cursive;
+    --font-alexandria: alexandria, Arial, sans-serif;
   }
 }
 @layer base {
@@ -215,26 +208,17 @@
   .m-4 {
     margin: calc(var(--spacing) * 4);
   }
-  .m-10 {
-    margin: calc(var(--spacing) * 10);
-  }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
-  }
-  .mt-11 {
-    margin-top: calc(var(--spacing) * 11);
   }
   .mt-15 {
     margin-top: calc(var(--spacing) * 15);
@@ -248,17 +232,8 @@
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
   }
-  .mb-8 {
-    margin-bottom: calc(var(--spacing) * 8);
-  }
-  .mb-\[-50\] {
-    margin-bottom: -50;
-  }
   .mb-\[-50px\] {
     margin-bottom: -50px;
-  }
-  .mb-\[-100px\] {
-    margin-bottom: -100px;
   }
   .ml-0 {
     margin-left: calc(var(--spacing) * 0);
@@ -272,33 +247,6 @@
   .h-dvh {
     height: 100dvh;
   }
-  .max-h-1 {
-    max-height: calc(var(--spacing) * 1);
-  }
-  .max-h-14 {
-    max-height: calc(var(--spacing) * 14);
-  }
-  .max-h-96 {
-    max-height: calc(var(--spacing) * 96);
-  }
-  .max-h-120 {
-    max-height: calc(var(--spacing) * 120);
-  }
-  .max-h-130 {
-    max-height: calc(var(--spacing) * 130);
-  }
-  .max-h-140 {
-    max-height: calc(var(--spacing) * 140);
-  }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
-  .w-36 {
-    width: calc(var(--spacing) * 36);
-  }
-  .w-50 {
-    width: calc(var(--spacing) * 50);
-  }
   .w-100 {
     width: calc(var(--spacing) * 100);
   }
@@ -310,9 +258,6 @@
   }
   .w-150 {
     width: calc(var(--spacing) * 150);
-  }
-  .w-350 {
-    width: calc(var(--spacing) * 350);
   }
   .min-w-\[25\%\] {
     min-width: 25%;
@@ -341,9 +286,6 @@
   .justify-center {
     justify-content: center;
   }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
-  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
@@ -355,12 +297,6 @@
   }
   .gap-40 {
     gap: calc(var(--spacing) * 40);
-  }
-  .justify-self-center {
-    justify-self: center;
-  }
-  .rounded-3xl {
-    border-radius: var(--radius-3xl);
   }
   .rounded-4xl {
     border-radius: var(--radius-4xl);
@@ -379,77 +315,29 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-\(--destaque\) {
-    background-color: var(--destaque);
-  }
-  .bg-\(--fundo\) {
-    background-color: var(--fundo);
-  }
-  .bg-\(--fundo1\) {
-    background-color: var(--fundo1);
-  }
   .bg-\(--fundo2\) {
     background-color: var(--fundo2);
-  }
-  .bg-\(--fundo3\) {
-    background-color: var(--fundo3);
-  }
-  .bg-\(--fundo4\) {
-    background-color: var(--fundo4);
-  }
-  .bg-\(--links\) {
-    background-color: var(--links);
-  }
-  .bg-\[\#3bad43\] {
-    background-color: #3bad43;
-  }
-  .bg-\[\#18531c\] {
-    background-color: #18531c;
   }
   .bg-\[\#24792a\] {
     background-color: #24792a;
   }
-  .bg-\[\#217727\] {
-    background-color: #217727;
-  }
-  .bg-\[\#299431\] {
-    background-color: #299431;
-  }
-  .bg-\[var\(--fundo1\)\] {
-    background-color: var(--fundo1);
-  }
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .bg-amber-600 {
-    background-color: var(--color-amber-600);
+  .bg-fundo1 {
+    background-color: var(--color-fundo1);
   }
-  .bg-none {
-    background-image: none;
+  .bg-fundo2 {
+    background-color: var(--color-fundo2);
   }
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
-  .p-5 {
-    padding: calc(var(--spacing) * 5);
-  }
   .p-7 {
     padding: calc(var(--spacing) * 7);
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
-  .p-15 {
-    padding: calc(var(--spacing) * 15);
-  }
-  .p-20 {
-    padding: calc(var(--spacing) * 20);
-  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
-  }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -472,29 +360,23 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
-  .py-30 {
-    padding-block: calc(var(--spacing) * 30);
-  }
-  .pt-5 {
-    padding-top: calc(var(--spacing) * 5);
-  }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
   }
   .pb-5 {
     padding-bottom: calc(var(--spacing) * 5);
   }
-  .pb-10 {
-    padding-bottom: calc(var(--spacing) * 10);
-  }
   .text-center {
     text-align: center;
   }
   .indent-2 {
     text-indent: calc(var(--spacing) * 2);
+  }
+  .font-alexandria {
+    font-family: var(--font-alexandria);
+  }
+  .font-alfa {
+    font-family: var(--font-alfa);
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -512,16 +394,11 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
-  .text-lg {
-    font-size: var(--text-lg);
-    line-height: var(--tw-leading, var(--text-lg--line-height));
-  }
-  .text-xl {
-    font-size: var(--text-xl);
-    line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
   .text-\[16px\] {
     font-size: 16px;
+  }
+  .text-\[20px\] {
+    font-size: 20px;
   }
   .text-\[32px\] {
     font-size: 32px;
@@ -537,29 +414,17 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
-  .text-\(--destaque\) {
-    color: var(--destaque);
-  }
-  .text-\(--links\) {
-    color: var(--links);
-  }
-  .text-amber-50 {
-    color: var(--color-amber-50);
-  }
-  .text-amber-100 {
-    color: var(--color-amber-100);
-  }
-  .text-amber-200 {
-    color: var(--color-amber-200);
-  }
   .text-black {
     color: var(--color-black);
+  }
+  .text-destaque {
+    color: var(--color-destaque);
   }
   .text-gray-200 {
     color: var(--color-gray-200);
   }
-  .text-gray-400 {
-    color: var(--color-gray-400);
+  .text-minitexto {
+    color: var(--color-minitexto);
   }
   .underline {
     text-decoration-line: underline;
@@ -573,46 +438,17 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .delay-700 {
-    transition-delay: 700ms;
-  }
-  .delay-1000 {
-    transition-delay: 1000ms;
-  }
-  .delay-3000 {
-    transition-delay: 3000ms;
-  }
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
   }
+  .duration-700 {
+    --tw-duration: 700ms;
+    transition-duration: 700ms;
+  }
   .duration-1000 {
     --tw-duration: 1000ms;
     transition-duration: 1000ms;
-  }
-  .duration-3000 {
-    --tw-duration: 3000ms;
-    transition-duration: 3000ms;
-  }
-  .hover\:scale-100 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 100%;
-        --tw-scale-y: 100%;
-        --tw-scale-z: 100%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-125 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 125%;
-        --tw-scale-y: 125%;
-        --tw-scale-z: 125%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
   }
   .hover\:scale-175 {
     &:hover {
@@ -624,62 +460,10 @@
       }
     }
   }
-  .hover\:scale-200 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 200%;
-        --tw-scale-y: 200%;
-        --tw-scale-z: 200%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:bg-\(--destaque\) {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--destaque);
-      }
-    }
-  }
   .hover\:bg-\[\#1bb125\] {
     &:hover {
       @media (hover: hover) {
         background-color: #1bb125;
-      }
-    }
-  }
-  .hover\:bg-\[\#5cb962\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #5cb962;
-      }
-    }
-  }
-  .hover\:bg-\[\#52ac58\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #52ac58;
-      }
-    }
-  }
-  .hover\:bg-\[\#77f87f\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #77f87f;
-      }
-    }
-  }
-  .hover\:bg-\[\#299431\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #299431;
-      }
-    }
-  }
-  .hover\:bg-\[--destaque\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: --destaque;
       }
     }
   }
@@ -697,10 +481,10 @@
       }
     }
   }
-  .hover\:text-gray-400 {
+  .hover\:text-black {
     &:hover {
       @media (hover: hover) {
-        color: var(--color-gray-400);
+        color: var(--color-black);
       }
     }
   }
@@ -711,6 +495,30 @@
       }
     }
   }
+  .hover\:text-links {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-links);
+      }
+    }
+  }
+  .hover\:text-minitexto {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-minitexto);
+      }
+    }
+  }
+}
+@font-face {
+  font-family: 'alfa';
+  src: url(../fontes/AlfaSlabOne-Regular.ttf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'alexandria';
+  src: url(../fontes/Alexandria-VariableFont_wght.ttf);
+  font-weight: normal;
 }
 @property --tw-border-style {
   syntax: "*";
