Tela de ajuda - Tailwind

--- a/Desenvolvimento Front-End/src/input.css
+++ b/Desenvolvimento Front-End/src/input.css
@@ -21,6 +21,7 @@
     --color-texto: #333;
     --color-minitexto: #696868;
     --color-links: #5e17eb;
+    --color-textos: #141414;
   
     --font-alfa: alfa, serif, cursive;
     --font-alexandria: alexandria, Arial, sans-serif;
